<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="499dp"
        android:layout_height="835dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        app:srcCompat="@drawable/fond" />

    <Button
        android:id="@+id/buttonLevel"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bois"
        android:text="@string/Jouer"
        android:textColor="#9A943D12"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonParam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonParam"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bois"
        android:text="@string/Paramètres"
        android:textColor="#9A943D12"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonScores"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bois"
        android:text="@string/Scores"
        android:textColor="#9A943D12"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/Jeu_du_solitaire"
        android:background="@drawable/bois"
        android:textColor="#9A943D12"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/boardGame"
        android:layout_width="318dp"
        android:layout_height="322dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.309"
        app:srcCompat="@drawable/tableau" />


</android.support.constraint.ConstraintLayout>